--- a/quest-book.html
+++ b/quest-book.html
@@ -67,7 +67,7 @@
         position="-0.8 1 -1.5" 
         interactive-book="fileName: assets/test10.pdf;
                           pageWidth: 1224; pageHeight: 1584;
-                          coverText: Test Document;
+                          coverText: Charlotte's Web;
                           controllerListenerId: #controller-data;">
     </a-entity>
         
@@ -75,7 +75,7 @@
         id="interactive-book"
         position="0.8 1 -1.5" 
         interactive-book="fileName: assets/wonderland.pdf;
-                          pageWidth: 646; pageHeight: 958;
+                          pageWidth: 1224; pageHeight: 1584;
                           coverText: Alice's Adventures in Wonderland;
                           coverColor: #440088;
                           coverTextColor: #FFFFFF;
