--- a/quest-book.html
+++ b/quest-book.html
@@ -55,7 +55,17 @@
         </a-entity>
 
     </a-entity>
-
+	<a-entity
+		id="textArea"
+		position="0 1.5 -2"
+		geometry="primitive: plane; width: 3; height:auto"
+		material="color: #444444; transparent: true; opacity: 0.80;"
+		text="anchor: center; baseline: center; wrapCount: 20;
+				transparent: true; opacity: 0.90; color: #AAAAFF;
+				value: Kreader - An Immersive and Interactive Reading Experience powered by Generative AI"
+		updater>
+	</a-entity>
+    
     <!-- 
          example file data:
          assets/wonderland.pdf has pageWidth 646  and pageHeight 958
