--- a/quest-book.html
+++ b/quest-book.html
@@ -18,29 +18,14 @@
 
 <script></script>
 
-<a-scene environment="preset: default;" renderer="antialias: true;">
+<a-scene environment="preset: starry;" renderer="antialias: true;">
         
     <a-assets>
-	<img id="sky" src="images/stars.jpg" crossorigin="anonymous" />
-	<img id="grass" src="images/grass.jpg" crossorigin="anonymous" />
-	<img id="crate" src="images/crate.jpg" crossorigin="anonymous" />
-	<img id="earth" src="images/earth-sphere.jpg" crossorigin="anonymous" />
-	<img id="hexagons" src="images/hexagons.png" crossorigin="anonymous" />
+        <img id="gradient" src="images/gradient-fade.png" />
+        <img id="border"   src="images/border.png" />
     </a-assets>
-		
-    <a-sky 
-		color = "#FFFFFF"
-		material = "src: #sky">
-    </a-sky>
 
-    <a-plane
-		width="100" height="100"
-		position=" 0.00 0.00 0.00" 
-		rotation="-90 0 0" 
-		color="#888888" 
-		material="src: #grass; repeat:10 10; transparent: true; opacity: 0.75"
-		shadow="cast: false; receive: true">
-    </a-plane>
+    <a-sky color = "#000337"></a-sky>
 
     <a-entity 
         id="player" 
