--- a/quest-book.html
+++ b/quest-book.html
@@ -18,7 +18,7 @@
 
 <script></script>
 
-<a-scene environment="preset: starry;" renderer="antialias: true;">
+<a-scene environment="preset: dream;" renderer="antialias: true;">
         
     <a-assets>
         <img id="gradient" src="images/gradient-fade.png" />
