--- a/quest-book.html
+++ b/quest-book.html
@@ -84,7 +84,7 @@
         
     <a-entity
         id="interactive-book"
-        position="0.8 1 -1.5" 
+        position="2.6 1 -1.5" 
         interactive-book="fileName: assets/wonderland.pdf;
                           pageWidth: 1224; pageHeight: 1584;
                           coverText: Alice's Adventures in Wonderland;
@@ -94,7 +94,7 @@
     </a-entity>
 
     <a-entity 
-	id="mockup" position="2.6, 1, -1.5" geometry="primitive: plane" material="src: #mockup">
+	id="mockup" position="1.0, 1, -1.5" geometry="primitive: plane; width:1; height:auto" material="src: #mockup">
     </a-scene>
 
 </body>
