--- a/quest-book.html
+++ b/quest-book.html
@@ -94,7 +94,7 @@
     </a-entity>
 
     <a-entity 
-	id="mockup" position="1.0, 1, -1.5" geometry="primitive: plane; width:1; height:auto" material="src: #mockup">
+	id="mockup" position="1.0, 1, -1.5" geometry="primitive: plane" material="src: #mockup">
     </a-scene>
 
 </body>
