--- a/quest-book.html
+++ b/quest-book.html
@@ -94,7 +94,10 @@
     </a-entity>
 
     <a-entity 
-	id="mockup" position="1.0, 1, -1.5" geometry="primitive: plane" material="src: #mockup">
+	id="mockup" 
+	position="1.0, 1, -1.5" 
+	geometry="primitive: plane; width: 0.5; height: 0.25" 
+	material="src: #mockup">
     </a-scene>
 
 </body>
