--- a/quest-book.html
+++ b/quest-book.html
@@ -96,8 +96,8 @@
     <a-entity 
 	id="mockup" 
 	position="1.0, 1, -1.5" 
-	geometry="primitive: plane; width: 0.5; height: 0.25" 
-	material="src: #mockup">
+	geometry="primitive: plane; width: 0.96; height: 0.54" 
+	material="src: #mockup; width: 963; height: 541">
     </a-scene>
 
 </body>
