--- a/quest-book.html
+++ b/quest-book.html
@@ -23,7 +23,9 @@
     <a-assets>
         <img id="gradient" src="images/gradient-fade.png" />
         <img id="border"   src="images/border.png" />
-	<img id="mockup"   src="images/Screen-Mockup.png" />    
+	<img id="mockup"   src="images/Screen-Mockup.png" />
+	<img id="iconPlay1" src="images/icon-play.jpg" />
+	<img id="iconPlay2" src="images/icon-play.jpg" />    
     </a-assets>
 
     <a-sky color = "#000337"></a-sky>
