--- a/quest-book.html
+++ b/quest-book.html
@@ -100,7 +100,8 @@
 	position="0, 1, -1.5" 
 	geometry="primitive: plane; width: 0.96; height: 0.54" 
 	material="src: #mockup; width: 963; height: 541">
-    </a-scene>
+    </a-entity>
+</a-scene>
 
 </body>
 </html>
