--- a/quest-book.html
+++ b/quest-book.html
@@ -101,6 +101,13 @@
 	geometry="primitive: plane; width: 0.96; height: 0.54" 
 	material="src: #mockup; width: 963; height: 541">
     </a-entity>
+	
+    <a-entity
+	id="AudioPlay1" 
+	position="0, -1, -1.5" 
+	geometry="primitive: box, width: 0.16, height: 0.16, depth: 0.04" 
+	material="src: #iconPlay1">
+    </a-entity>
 </a-scene>
 
 </body>
