--- a/quest-book.html
+++ b/quest-book.html
@@ -106,7 +106,7 @@
 	id="AudioPlay1" 
 	position="0, 2, -1.5" 
 	geometry="primitive: box, width: 0.16, height: 0.16, depth: 0.04" 
-	material="src: #iconPlay1">
+	material="src: #iconPlay1; color: #EEEEEE">
     </a-entity>
 </a-scene>
 
