--- a/quest-book.html
+++ b/quest-book.html
@@ -104,7 +104,14 @@
 	
     <a-entity
 	id="AudioPlay1" 
-	position="0, -1.5, -1.5" 
+	position="0, 1.5, -1.5" 
+	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
+	material="src: #iconPlay1; color: #EEEEEE">
+    </a-entity>
+	
+    <a-entity
+	id="AudioPlay2" 
+	position="0.5, 1.5, -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
 	material="src: #iconPlay1; color: #EEEEEE">
     </a-entity>
