--- a/quest-book.html
+++ b/quest-book.html
@@ -24,8 +24,8 @@
         <img id="gradient" src="images/gradient-fade.png" />
         <img id="border"   src="images/border.png" />
 	<img id="mockup"   src="images/Screen-Mockup.png" />
-	<img id="iconPlay1" src="images/icon-play.jpg" />
-	<img id="iconPlay2" src="images/icon-play.jpg" />    
+	<img id="iconPlay" src="images/icon-play.jpg" />
+	<img id="iconStop" src="images/icon-stop.jpg" />    
     </a-assets>
 
     <a-sky color = "#000337"></a-sky>
@@ -103,17 +103,17 @@
     </a-entity>
 	
     <a-entity
-	id="AudioPlay1" 
-	position="0, 1.5, -1.5" 
+	id="AudioPlay" 
+	position="-0.4, 1.5, -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
-	material="src: #iconPlay1; color: #EEEEEE">
+	material="src: #iconPlay; color: #EEEEEE">
     </a-entity>
 	
     <a-entity
-	id="AudioPlay2" 
-	position="0.5, 1.5, -1.5" 
+	id="AudioStop" 
+	position="0, 1.5, -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
-	material="src: #iconPlay1; color: #EEEEEE">
+	material="src: #iconStop; color: #EEEEEE">
     </a-entity>
 </a-scene>
 
