--- a/quest-book.html
+++ b/quest-book.html
@@ -105,14 +105,14 @@
     <a-entity
 	id="AudioPlay" 
 	position="-0.1, 0.5, -1.5" 
-	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
+	geometry="primitive: plane; width: 0.1; height: 0.1" 
 	material="src: #iconPlay; color: #EEEEEE">
     </a-entity>
 	
     <a-entity
 	id="AudioStop" 
 	position="0.1, 0.5, -1.5" 
-	geometry="primitive: box; width: 0.1; height: 0.1; depth: 0.04" 
+	geometry="primitive: plane; width: 0.1; height: 0.1" 
 	material="src: #iconStop; color: #EEEEEE">
     </a-entity>
 </a-scene>
