--- a/quest-book.html
+++ b/quest-book.html
@@ -111,7 +111,6 @@ window["MusicData"] = [
 	id="mockup" 
 	position="0, 1, -1.5" 
 	geometry="primitive: plane; width: 0.96; height: 0.54"
-	sound="src: #Audio1; on: click; positional: false; volume: 0.50"
 	material="src: #mockup; width: 963; height: 541">
     </a-entity>
 	
@@ -119,6 +118,7 @@ window["MusicData"] = [
 	id="AudioPlay" 
 	position="-0.1, 0.5, -1.5" 
 	geometry="primitive: plane; width: 0.1; height: 0.1" 
+	sound="src: #Audio1; on: auto; positional: false; volume: 0.50"
 	material="src: #iconPlay; color: #EEEEEE">
     </a-entity>
 	
