--- a/quest-book.html
+++ b/quest-book.html
@@ -117,7 +117,7 @@ window["MusicData"] = [
     <a-entity
 	id="AudioPlay" 
 	position="-0.1, 0.5, -1.5" 
-	geometry="primitive: plane; width: 0.1; height: 0.1" 
+	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.01" 
 	sound="src: #Audio1; on: auto; positional: false; volume: 0.50"
 	material="src: #iconPlay; color: #EEEEEE">
     </a-entity>
@@ -125,7 +125,7 @@ window["MusicData"] = [
     <a-entity
 	id="AudioStop" 
 	position="0.1, 0.5, -1.5" 
-	geometry="primitive: plane; width: 0.1; height: 0.1" 
+	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.01" 
 	material="src: #iconStop; color: #EEEEEE">
     </a-entity>
 </a-scene>
