--- a/quest-book.html
+++ b/quest-book.html
@@ -36,8 +36,8 @@ window["MusicData"] = [
 	<img id="mockup"   src="images/Screen-Mockup.png" />
 	<img id="iconPlay" src="images/icon-play.jpg" />
 	<img id="iconStop" src="images/icon-stop.jpg" /> 
-	<audio id="Audio1" src="music/Audio1.mp3" />
-	<audio id="Audio2" src="music/Audio2.mp3" />		
+	<audio id="Audio1" src="music/Audio1.mp3" ></audio>
+	<audio id="Audio2" src="music/Audio2.mp3" ></audio>		
     </a-assets>
 
     <a-sky color = "#000337"></a-sky>
