--- a/quest-book.html
+++ b/quest-book.html
@@ -110,22 +110,22 @@ window["MusicData"] = [
     <a-entity 
 	id="mockup" 
 	position="0, 1, -1.5" 
-	geometry="primitive: plane; width: 0.96; height: 0.54"
+	geometry="primitive: box; width: 0.96; height: 0.54; depth=0.04"
 	material="src: #mockup; width: 963; height: 541">
     </a-entity>
 	
     <a-entity
 	id="AudioPlay" 
 	position="-0.1, 0.5, -1.5" 
-	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.01" 
-	sound="src: #Audio1; on: auto; positional: false; volume: 0.50"
+	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
+	sound="src: #Audio1; on: click; positional: false; volume: 0.50"
 	material="src: #iconPlay; color: #EEEEEE">
     </a-entity>
 	
     <a-entity
 	id="AudioStop" 
 	position="0.1, 0.5, -1.5" 
-	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.01" 
+	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
 	material="src: #iconStop; color: #EEEEEE">
     </a-entity>
 </a-scene>
