--- a/quest-book.html
+++ b/quest-book.html
@@ -111,7 +111,8 @@ window["MusicData"] = [
 	id="mockup" 
 	position="0, 1, -1.5" 
 	geometry="primitive: box; width: 0.96; height: 0.54; depth=0.04"
-	material="src: #mockup; width: 963; height: 541">
+	material="src: #mockup; width: 963; height: 541"
+	raycaster-target>
     </a-entity>
 	
     <a-entity
@@ -119,14 +120,16 @@ window["MusicData"] = [
 	position="-0.1, 0.5, -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
 	sound="src: #Audio1; on: click; positional: false; volume: 0.50"
-	material="src: #iconPlay; color: #EEEEEE">
+	material="src: #iconPlay; color: #EEEEEE"
+	raycaster-target>
     </a-entity>
 	
     <a-entity
 	id="AudioStop" 
 	position="0.1, 0.5, -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
-	material="src: #iconStop; color: #EEEEEE">
+	material="src: #iconStop; color: #EEEEEE"
+	raycaster-target>
     </a-entity>
 </a-scene>
 
