--- a/quest-book.html
+++ b/quest-book.html
@@ -111,8 +111,7 @@ window["MusicData"] = [
 	id="mockup" 
 	position="0, 1, -1.5" 
 	geometry="primitive: box; width: 0.96; height: 0.54; depth=0.04"
-	material="src: #mockup; width: 963; height: 541"
-	raycaster-target>
+	material="src: #mockup; width: 963; height: 541">
     </a-entity>
 	
     <a-entity
