--- a/quest-book.html
+++ b/quest-book.html
@@ -11,7 +11,7 @@
 
     <script src="js/pdf.js"></script>
     <script src="js/interactive-book.js"></script>
-
+    <script src="js/music-player.js"></script>
 </head>
 
 <body>
