--- a/quest-book.html
+++ b/quest-book.html
@@ -110,7 +110,7 @@ window["MusicData"] = [
     <a-entity 
 	id="mockup" 
 	position="0, 1, -1.5" 
-	geometry="primitive: plane; width: 0.96; height: 0.54; depth=0.04"
+	geometry="primitive: plane; width: 0.96; height: 0.54"
 	material="src: #mockup; width: 963; height: 541">
     </a-entity>
 	
