--- a/quest-book.html
+++ b/quest-book.html
@@ -109,14 +109,14 @@ window["MusicData"] = [
 
     <a-entity 
 	id="mockup" 
-	position="0, 1, -1.5" 
+	position="0 1 -1.5" 
 	geometry="primitive: plane; width: 0.96; height: 0.54"
 	material="src: #mockup; width: 963; height: 541">
     </a-entity>
 	
     <a-entity
 	id="AudioPlay" 
-	position="-0.1, 0.5, -1.5" 
+	position="-0.1 0.5 -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
 	sound="src: #Audio1; on: click; positional: false; volume: 0.50"
 	material="src: #iconPlay; color: #EEEEEE"
@@ -125,7 +125,7 @@ window["MusicData"] = [
 	
     <a-entity
 	id="AudioStop" 
-	position="0.1, 0.5, -1.5" 
+	position="0.1 0.5 -1.5" 
 	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
 	material="src: #iconStop; color: #EEEEEE"
 	raycaster-target>
