--- a/quest-book.html
+++ b/quest-book.html
@@ -20,10 +20,14 @@
 // load music into global variable for access by music-player component
 window["MusicData"] = [
     {
-        audioURL: "music/Audio1.mp3"
+        audioURL: "music/Audio1.mp3",
+	imageURL: "music/ChauSara/image.jpg", 
+        songText: "Artist: Chau Sara --- Song: Mondo \n (music provided by Lofi Girl)"
     },
     {
-        audioURL: "music/Audio2.mp3" 
+        audioURL: "music/Audio2.mp3",
+	imageURL: "music/Osaki/image.jpg", 
+        songText: "Artist: Osaki --- Song: Reflections \n (music provided by Lofi Girl)"    
     }
 ];	
 </script>
@@ -34,8 +38,18 @@ window["MusicData"] = [
         <img id="gradient" src="images/gradient-fade.png" />
         <img id="border"   src="images/border.png" />
 	<img id="mockup"   src="images/Screen-Mockup.png" />
-	<img id="iconPlay" src="images/icon-play.jpg" />
-	<img id="iconStop" src="images/icon-stop.jpg" /> 
+	<img id="iconBlank"      src="images/icon-blank.jpg" />        
+        <img id="iconWait"       src="images/icon-wait.jpg" />        
+        <img id="iconPlay"       src="images/icon-play.jpg" />        
+        <img id="iconPause"      src="images/icon-pause.jpg" />        
+        <img id="iconNext"       src="images/icon-next.jpg" />        
+        <img id="iconPrevious"   src="images/icon-previous.jpg" />        
+        <img id="iconReplay"     src="images/icon-replay.jpg" />        
+        <img id="iconPlayOnce"   src="images/icon-play-once.jpg" />        
+        <img id="iconPlayLoop"   src="images/icon-play-loop.jpg" />        
+        <img id="iconPlayAll"    src="images/icon-play-all.jpg" />        
+        <img id="iconVolumeUp"   src="images/icon-volume-up.jpg" />        
+        <img id="iconVolumeDown" src="images/icon-volume-down.jpg" />     
 	<audio id="Audio1" src="music/Audio1.mp3" ></audio>
 	<audio id="Audio2" src="music/Audio2.mp3" ></audio>		
     </a-assets>
@@ -129,6 +143,12 @@ window["MusicData"] = [
 	geometry="primitive: box; width: 0.1; height: 0.1; depth:0.04" 
 	material="src: #iconStop; color: #EEEEEE"
 	raycaster-target>
+    </a-entity>
+	
+    <a-entity
+        position = "0 2 -2"
+        music-player="controllerListenerId: #controller-data;
+                      musicDataVariableName: MusicData;">
     </a-entity>
 </a-scene>
 
