--- a/quest-book.html
+++ b/quest-book.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>A-Frame: Quest PDF Book Reader</title>
+    <title>A-Frame: Kreader Book Reader</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="js/aframe-environment-component.js"></script>
     <script src="js/controller-listener.js"></script>
@@ -38,6 +38,7 @@ window["MusicData"] = [
         <img id="gradient" src="images/gradient-fade.png" />
         <img id="border"   src="images/border.png" />
 	<img id="mockup"   src="images/Screen-Mockup.png" />
+	<img id="bookcover"   src="images/CharlottesWeb-Cover.jpg" />
 	<img id="iconBlank"      src="images/icon-blank.jpg" />        
         <img id="iconWait"       src="images/icon-wait.jpg" />        
         <img id="iconPlay"       src="images/icon-play.jpg" />        
@@ -104,7 +105,7 @@ window["MusicData"] = [
     <a-entity
         id="interactive-book"
         position="-1 1 -1.5" 
-        interactive-book="fileName: assets/test10.pdf;
+        interactive-book="fileName: assets/CharlottesWeb.pdf;
                           pageWidth: 1224; pageHeight: 1584;
                           coverText: Charlotte's Web;
                           controllerListenerId: #controller-data;">
