--- a/quest-book.html
+++ b/quest-book.html
@@ -52,7 +52,7 @@ window["MusicData"] = [
         <img id="iconVolumeDown" src="images/icon-volume-down.jpg" />     		
     </a-assets>
 
-    <a-sky color = "#000337"></a-sky>
+    <a-sky color = "#16F1DD"></a-sky>
 
     <a-entity 
         id="player" 
